# karczoch

./: CMakeLists.txt  README  room1.xcf  room2.xcf
data/: CMakeLists.txt  hdd.flac  karczoch.desktop  modem.flac  ring.flac  startup.flac  szum.flac  tada.flac
data/icons/: icon.rc  karczoch.icns
data/sprites/baby/: at.ini  baby.ini  cons2.ini  counter.ini  hacker.ini  homepage.ini  mchammer.ini  mercy.ini  new.ini  party.ini  siren.ini  spooky.ini
data/sprites/mom/: wait.ini
libsuperderpy/src/: gamestate.c  libsuperderpy.c  libsuperderpy.h  utils.c  utils.h
src/: common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  about.c  bsod.c  dosowisko.c  dosowisko.h  gaem.c  gaem.h  intro.c  intro.h  loading.c  menu.c  menu.h  off.c  off.h  options.c  options.h  screensaver.c  screensaver.h
